# torbox-app

./: .dockerignore  .env.example  .env.local.example  .gitignore  .prettierignore  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.selfhosted.yml  docker-compose.yml  dockerfile  eslint.config.mjs  jsconfig.json  next.config.mjs  package-lock.json  package.json  portainer.yml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  test-setup-dom.js  tsconfig.json  tsconfig.strict.json
.github/: FUNDING.yml  dependabot.yml  pull.yml
.github./: pull.yml
.react-doctor/: false-positives.md
backend/: .env.example  .env.local.example  ANALYSIS_USER_DB_ISSUES.md  Dockerfile  README.md  package-lock.json  package.json
config/: automation-rule-capabilities.json  (+1 more)
public/: sw.js  (+3 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: desktop.toml
src-tauri/src/: constants.rs  launch_args.rs  lib.rs  macos_app_icon.rs  macos_display_name.rs  main.rs  menu.rs  state.rs
src-tauri/src/commands/: autostart.rs  credentials.rs  hello.rs  mod.rs  navigation.rs  notifications.rs  picker.rs  settings.rs  tray.rs  updates.rs  watcher.rs  window_presence.rs
src-tauri/src/services/: atomic_json.rs  capabilities.rs  credentials.rs  folder_watcher.rs  macos_autostart.rs  mod.rs  notifications.rs  settings.rs  tbm_client.rs  tray.rs  updates.rs  upload_queue.rs  url_validation.rs  watcher_batch.rs  watcher_paths.rs  web_path.rs  window_presence.rs  window_state.rs
(+1201 files in other folders)
