[package]
name = "torbox-manager"
version = "0.1.0"
description = "TorBox Manager desktop shell"
authors = ["TorBox Manager"]
edition = "2021"

[lib]
name = "torbox_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["dynamic-acl", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", default-features = false }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
sha2 = "0.10"
rfd = "0.15"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSData"] }
smappservice-rs = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
